app/styles/charts.scss
$fg:     #333;
$bg:     rgba(236, 240, 241, 0.5);
$color1: rgba( 52,  73,  94, 1.0);
$color2: rgba( 44,  62,  80, 1.0);
$color3: rgba(149, 165, 166, 1.0);
$color4: rgba(127, 140, 141, 1.0);


body {
  padding: 0;
}
#drawer {
  // position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  // max-height: 100vh;
  background: $bg;
  border-top: 1px solid $color1;
  overflow: hidden;
  transition: transform 500ms ease-out;
  // transform: translateY(-80%);
  z-index: 99;
  &.open {
    // transform: translateY(0);
  }
}
#navbar {
  min-height: 6rem;
  padding: 1.5rem 2em 2.5rem;
  .brand {
    font: 400 1.5em/3rem 'Montserrat',sans-serif;
    letter-spacing: -0.03em;
  }
  h1 {
    margin: 1rem 0 0;
    padding-left: 3rem;
    background: url(../images/icon.png) no-repeat left;
  }
  p {
    margin: 0;
    padding-left: 3rem;
  }
}

.chart {
  max-width: 100%;
  min-height: 1rem;
  width: 700px;
  height: 400px;
}

#map {
  // position: fixed;
  top: 0;
  width: 100%;
  background: $color4;
  z-index: 1;
  & > svg {
    width: 100%;
    // height: 100%;
  }
}
path {
  fill: $color3;
  stroke: lighten($color3, 5);
  stroke-width: .5px;
  transition: opacity 5ms ease-in;
  &:hover {
    fill: $color1;
  }
}
#zones {
  path               { opacity: 0.95; }
  &:hover path       { opacity: 0.75; }
  &:hover path:hover { opacity: 1.00; }
}
#counties {
  path               { opacity: 0.75; }
  path:hover         { opacity: 0.85; }
}

path {
  // opacity: 0.75;
}
path.severity0 {
  fill: #FFFF00;
}
path.severity1 {
  fill: #FCD37F;
}
path.severity2 {
  fill: #FFAA00;
}
path.severity3 {
  fill: #E60000;
}
path.severity4 {
  fill: #730000;
}

